--- a/novedades.html
+++ b/novedades.html
@@ -26,35 +26,28 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="servicios.html">Servicios</a></li>
-            <li><a class="activo" href="galeria.html">Galería</a></li>
-            <li><a href="novedades.html">Novedades</a></li>
+            <li><a href="galeria.html">Galería</a></li>
+            <li><a class="activo" href="novedades.html">Novedades</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main class="holder">
-        <h2>Galería</h2>
-        <div class="galeria">
-            <div class="foto">
-                <img src="img/galeria/img01.jpg" alt="img01">
-            </div>
-            <div class="foto">
-                <img src="img/galeria/img02.jpg" alt="img2">
-            </div>
-            <div class="foto">
-                <img src="img/galeria/img03.jpg" alt="img03">
-            </div>
-            <div class="foto">
-                <img src="img/galeria/img04.jpg" alt="img4">
-            </div>
-            <div class="foto">
-                <img src="img/galeria/img05.jpg" alt="img05">
-            </div>
-            <div class="foto">
-                <img src="img/galeria/img06.jpg" alt="img6">
-            </div>
-            <div class="foto">
-                <img src="img/galeria/img07.jpg" alt="img07">
-            </div>
+        <h2>Novedades</h2>
+        <div class="novedades">
+            <h3>Titulo</h3>
+            <h4>Subtitulo</h4>
+            <p>Descripcion - Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic architecto neque reiciendis
+                laboriosam quasi consectetur unde enim ipsam molestias tenetur, delectus fugiat quibusdam impedit,
+                cumque pariatur? Iusto sunt culpa numquam.</p>
+                <hr>
+        </div>
+        <div class="novedades">
+            <h3>Titulo</h3>
+            <h4>Subtitulo</h4>
+            <p>Descripcion - Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic architecto neque reiciendis
+                laboriosam quasi consectetur unde enim ipsam molestias tenetur, delectus fugiat quibusdam impedit,
+                cumque pariatur? Iusto sunt culpa numquam.</p>
+                <hr>
         </div>
     </main>
     <footer>
